--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,3 @@
-
 # Java Gradle CircleCI 2.0 configuration file
 #
 # Check https://circleci.com/docs/2.0/language-java/ for more details
@@ -39,17 +38,9 @@ jobs:
             - ~/.m2
           key: v1-dependencies-{{ checksum "build.gradle" }}
         
-      - run: gradle build -x test 
+      # run tests!
       - run: gradle test
-      - run: gradle shadowJar
-      - run: java -cp build/libs/starbucks-all.jar starbucks.Main
-      - store_test_results:
-          path: build/reports
-      - store_artifacts:
-          path: build/reports
-      - store_artifacts:
-          path: build/libs/starbucks-all.jar
-  
 
 
-    
+
+
